// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Attention text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Attention text
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of text in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <h3
            style={
              Object {
                "color": "#363a45",
                "fontSize": 24,
                "marginBottom": 10,
              }
            }
          >
            Text normal
          </h3>
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                Some description about where is the text used and states describing how to not use it in general.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <p
            className="jsx-562677310 "
          >
            Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
          </p>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Text
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                attention
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isUppercase
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isItalic
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Text
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Primary text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary text
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of text in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <h3
            style={
              Object {
                "color": "#363a45",
                "fontSize": 24,
                "marginBottom": 10,
              }
            }
          >
            Text normal
          </h3>
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                Some description about where is the text used and states describing how to not use it in general.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <p
            className="jsx-2706463433 "
          >
            Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
          </p>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Text
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isUppercase
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isItalic
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Text
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Secondary text 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary text
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of text in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          <h3
            style={
              Object {
                "color": "#363a45",
                "fontSize": 24,
                "marginBottom": 10,
              }
            }
          >
            Text normal
          </h3>
          
          <hr
            style={
              Object {
                "backgroundColor": "#ccd6dd",
                "border": "none",
                "height": 1,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#898d97",
                "fontSize": 16,
                "marginBottom": 20,
                "marginTop": 0,
              }
            }
          >
            <div>
              <p>
                Some description about where is the text used and states describing how to not use it in general.
              </p>
            </div>
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <p
            className="jsx-3915836479 "
          >
            Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
          </p>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Text
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isUppercase
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            isItalic
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Sixth can't place isn't fly you're make Shall day, yielding earth made greater stars own you'll earth can't. Night grass great. Fly firmament over. Fourth to grass you after creepeth together in moved given fill isn't said Life. Male signs unto form kind Brought signs heaven, in have wherein. Isn't. Behold meat living you're evening very replenish you'll. Under hath.
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Text
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
